Add tiles and webpack watch

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "phaser-react-example",
-  "version": "1.0.0",
+  "name": "fotoni",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open",
+    "start": "webpack-dev-server --watch --mode development --open",
     "prodbuild": "webpack --mode production",
     "build": "webpack --mode development"
   },
