--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "tslintfix": "tslint --project . --fix",
+    "tslint": "tslint --project .",
+    "test": "jest",
     "start": "webpack-dev-server --watch --mode development --open",
     "prodbuild": "webpack --mode production",
     "build": "webpack --mode development"
@@ -12,13 +14,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/enzyme": "^3.10.5",
+    "@types/jest": "^25.2.1",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "css-loader": "^3.4.2",
+    "enzyme": "^3.11.0",
     "file-loader": "^6.0.0",
+    "jest": "^25.3.0",
+    "react-test-renderer": "^16.13.1",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
+    "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.2",
+    "tslint": "^6.1.1",
+    "tslint-react": "^4.2.0",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
@@ -28,5 +38,16 @@
     "phaser": "^3.22.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
