--- a/package.json
+++ b/package.json
@@ -14,15 +14,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/enzyme": "^3.10.5",
     "@types/jest": "^25.2.1",
-    "@types/react": "^16.9.32",
-    "@types/react-dom": "^16.9.6",
     "css-loader": "^3.4.2",
-    "enzyme": "^3.11.0",
     "file-loader": "^6.0.0",
     "jest": "^25.3.0",
-    "react-test-renderer": "^16.13.1",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
     "ts-jest": "^25.3.1",
@@ -35,9 +30,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "phaser": "^3.22.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "phaser": "^3.22.0"
   },
   "jest": {
     "transform": {
